🐛 fix: dark mode in blog list

--- a/src/styles/Blog.module.scss
+++ b/src/styles/Blog.module.scss
@@ -2,7 +2,6 @@
   font-family: Nunito Sans;
   font-weight: 700;
   text-transform: uppercase;
-  color: var(--text-headings);
   font-size: 1.875rem;
   letter-spacing: 0.125rem;
 }
@@ -10,6 +9,7 @@
 .headingContainer {
   margin-top: 0;
   margin-bottom: 4rem;
+  color: var(--text-headings);
 
   @media only screen and (max-width: 720px) {
     margin-bottom: 2 rem;
@@ -20,7 +20,6 @@
   font-family: Nunito Sans;
   font-weight: 400;
   font-size: 1rem;
-  color: var(--text-subtitle);
   margin-bottom: 2rem;
   margin-top: 0;
 }
